Fix link contrast

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -153,3 +153,10 @@ li {
 .card {
   border: 2px solid rgba(0,0,0,.125);
 }
+
+a {
+  color: $blue;
+}
+a:hover {
+  color: darken($blue, 10%);
+}
